menambahkan html dan css

--- a/index.html
+++ b/index.html
@@ -64,5 +64,23 @@
             </nav>
         </div>
         </div>
+
+        <div class="kolomdaftar">
+            <h2>Contact me for <br> collaboration and <br>
+                 speaking <br> engagement <br> opportunities!</h2>
+            <div class="daftar">
+                <form action="">
+                    <input type="name" placeholder="name">
+                    <input type="email" placeholder="email">
+                    <input type="tel" placeholder="phone">
+                    <textarea name="" id="" rows="6"  cols="100" placeholder="type your massage here..."></textarea>
+                    <button type="submit" class="submit-button">Submit</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="ending">
+            <p>© 2023 by Lee Phan. Proudly created with Wix.com</p>
+        </div>
 </body>
 </html>
