--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <p>My passion for building digital products is shaped by having the mindset of putting humans in the center of attention; to ensure the product team is solving the right problem for the people.</p>
             <p>My design process is backed-up with the iterative approach of user research, problem definition, hypotheses creations, prototyping, and testing.</p>
             <p>My strong focus is on discovery research and building design concepts that will enable organizations in defining a new strategy or product opportunities to help the business gain its competitive advantage.</p>
+            <div class="isi2">
+                <a>chcek out my CV</a>
+            </div>
+            <div class="isi3">
+                <a>some of my works</a>
+            </div>
             </div>
             <div class="box2"></div>
         </div>
