banyakperubahan yang saya lakukan

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
         <h3>LUKY PRIMADANI.</h3>
         <nav class="daftarisi">
             <a href="#">home</a>
-            <a href="#">experiance & education</a>
+            <a href="eksperience&education.html">experiance & education</a>
             <a href="#">portfolio</a>
             <a href="#">writing</a>
             <a href="#">speaking</a>
