--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="isikolom">
                 <p>Contact me for <br class="desktop-br">
                  collaboration and <br class="desktop-br">
-                 speaking <br class="desktop-br">
+                 speasking <br class="desktop-br">
                 engagement <br class="desktop-br">
                 opportunities!
                 </p>
